Updated navigation and flow for cashlinks.html. updated media on ofidtales.html. Changed navigation tables on index.html to test. These changes will beed to be applied accross pages.

--- a/ofidtales.html
+++ b/ofidtales.html
@@ -94,7 +94,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/giddys-universe-logo-tp.png" alt="Giddy Tales Logo" class="logo">
+				<img src="/assets/images/giddys-tv-toys-logo.PNG" alt="Giddy Tales Logo" class="logo">
 			</a>
 		</header>
 
@@ -382,7 +382,7 @@
 					<div class="quick-start-items">
 						<article id="giddy-tales-nav" class="quick-start-item">
 							<span class="image left">
-								<img src="/assets/images/giddy-tales-logo.jpg" alt="OFiD Crew Giddy Character">
+								<img src="/assets/images/ofidtales-shorts.PNG" alt="OFiD Crew Giddy Character">
 							</span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Giddy Tales</h3>
@@ -654,7 +654,7 @@
 							<button class="scroll-arrow left" aria-label="Scroll Left"><i
 									class="fas fa-arrow-left"></i></button>
 							<div class="box-content">
-								<span class="image"><img src="assets/images/ofidkid-giddy-01.jpg"
+								<span class="image"><img src="assets/images/ofidtales-giddy.PNG"
 										alt="OFiD Crew Giddy Character"></span>
 								<h3>Giddy</h3>
 								<p>
@@ -687,7 +687,7 @@
 							<button class="scroll-arrow left" aria-label="Scroll Left"><i
 									class="fas fa-arrow-left"></i></button>
 							<div class="box-content">
-								<span class="image"><img src="assets/images/ofidkid-buster-bouncer-02.jpg"
+								<span class="image"><img src="assets/images/ofidtales-buster.PNG"
 										alt="OFiD Crew Buster Character"></span>
 								<h3>Buster the Bouncer</h3>
 								<p>
@@ -717,7 +717,7 @@
 							<button class="scroll-arrow left" aria-label="Scroll Left"><i
 									class="fas fa-arrow-left"></i></button>
 							<div class="box-content">
-								<span class="image"><img src="assets/images/ofidkid-rex-01.jpg"
+								<span class="image"><img src="assets/images/ofidtales-rex.PNG"
 										alt="OFiD Crew Rex Character"></span>
 								<h3>Rex</h3>
 								<p>
@@ -737,6 +737,38 @@
 									leadership. He
 									might be soft-spoken, but his actions
 									speak volumes, making him an invaluable member of the OFiD Crew.
+								</p>
+							</div>
+							<button class="scroll-arrow right" aria-label="Scroll Right"><i
+									class="fas fa-arrow-right"></i></button>
+						</article>
+
+						<!-- Box 4: Grampa -->
+						<article class="scroll-box">
+							<button class="scroll-arrow left" aria-label="Scroll Left"><i
+									class="fas fa-arrow-left"></i></button>
+							<div class="box-content">
+								<span class="image"><img src="assets/images/ofidtales-grampa.PNG"
+										alt="OFiD Crew Rex Character"></span>
+								<h3>Grampa</h3>
+								<p>
+									
+								</p>
+							</div>
+							<button class="scroll-arrow right" aria-label="Scroll Right"><i
+									class="fas fa-arrow-right"></i></button>
+						</article>
+
+						<!-- Box 5: Baby Tokin -->
+						<article class="scroll-box">
+							<button class="scroll-arrow left" aria-label="Scroll Left"><i
+									class="fas fa-arrow-left"></i></button>
+							<div class="box-content">
+								<span class="image"><img src="assets/images/ofidtales-baby-tokin.PNG"
+										alt="OFiD Crew Rex Character"></span>
+								<h3>Baby Tokin</h3>
+								<p>
+									
 								</p>
 							</div>
 							<button class="scroll-arrow right" aria-label="Scroll Right"><i
