Updated background and intro logos with minor text edits on index.html.

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -758,7 +758,7 @@
 									return;
 								}
 
-								messageDiv.textContent = 'Checking code follow prompts to redeem';
+								messageDiv.textContent = 'Validating code — redirecting to Kinnected!';
 								button.textContent = 'Checking...';
 								button.disabled = true;
 
