--- a/index.html
+++ b/index.html
@@ -100,20 +100,20 @@
 		<div id="intro">
 			<h1 class="left-aligned">
 				<span class="smaller-heading">Bouncy Ball<br />Presented By</span><br />
-				OF<span class="i">i</span>DCrypt
+				OFiDCrypt
 			</h1>
 
 			<div class="images-with-plus">
 				<a href="#jump-ahead" class="no-style-link">
-					<img src="/assets/images/intro-ofid-logo-300.png" alt="Solana Logo & Jump to Section">
+					<img src="/assets/images/ofid-logo-saturn01-300.png" alt="Solana Logo & Jump to Section">
 				</a>
-				<span class="plus-sign">+</span>
+				<span class="plus-sign">∞</span>
 				<a href="/ofidtales.html" class="no-style-link">
-					<img src="/assets/images/intro-giddys-logo-300.png" alt="Phantom Logo & Link to Download">
+					<img src="/assets/images/giddys-logo-300.png" alt="Phantom Logo & Link to Download">
 				</a>
 			</div>
 			<div>
-				<h1 class="left-aligned">G<span class="i">i</span>ddy's Universe<br />
+				<h1 class="left-aligned">Universe<br />
 					<span class="smaller-heading-bottom">Series & Shop</span>
 				</h1>
 			</div>
@@ -149,9 +149,9 @@
 			<ul class="links">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="ofidtales.html">Giddy's Shop</a></li>
-				<li><a href="cashlinks.html">Digital Gifts</a></li>
 				<li><a href="explore.html">Wallets & Apps</a></li>
 				<li><a href="bouncyball.html">Tokens</a></li>
+				<li><a href="cashlinks.html">Digital Gifts</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -409,19 +409,11 @@
 					<header id="jump-ahead">
 						<h2>New Digital Wallets: Unlock More than Money</h2>
 
-						<p>OFiDCrypt is one of the first of its kind—<b>where innovation meets affordability</b>—
-							unlock exclusive savings on our marketing services and Giddy’s Goods when you set up your
+						<p>OFiDCrypt is one of the first of its kind; <b>where innovation meets affordability</b> — 
+							unlock exclusive savings on OFiDCrypt Services and Giddy’s Goods when you set up your
 							first digital
 							wallet. Dive into our secure, in-house digital currency and experience the future of smart
 							spending. Need Help?</br><a href="#guide"> Check Our Guides</a></p>
-
-						<p style="text-align: center;">
-							All you need is <b>one thing</b>—a wallet (like a banking app). It's quick, free, and gets
-							you started fast.
-							Want to cash out later? We can help set up an exchange account (think crypto bank).
-							That’s it! You’re ready to swap dollars for your first digital asset—just like exchanging
-							currency for travel.
-						</p>
 					</header>
 
 					<div class="quick-start-items">
