Added intro video to index.html and fixed smooth jjumplinks for onclick on ofidtales.html. Updated some logos and text.

--- a/ofidtales.html
+++ b/ofidtales.html
@@ -388,7 +388,7 @@
 								<h3 class="quick-start-title">Giddy Tales</h3>
 								<p class="align-center">Animated Adventures</p>
 							</div>
-							<button class="round-button" onclick="window.location.href='#giddy-tales'">
+							<button class="round-button" data-scroll="#giddy-tales">
 								View Series
 							</button>
 						</article>
@@ -401,9 +401,9 @@
 								<h3 class="quick-start-title">Giddy's Shop</h3>
 								<p class="align-center">Series Goods & Toys</p>
 							</div>
-							<button class="round-button" onclick="window.location.href='#'">
-  Coming Soon
-</button>
+							<button class="round-button" data-scroll="#">
+								Coming Soon
+							</button>
 						</article>
 
 						<article class="quick-start-item">
@@ -414,8 +414,8 @@
 								<h3 class="quick-start-title">Meet The Crew</h3>
 								<p class="align-center">Featured Characters</p>
 							</div>
-							<button class="round-button" onclick="window.location.href='#meet-crew'">
-  Profiles
+							<button class="round-button" data-scroll="#meet-crew">
+    Profiles
 </button>
 						</article>
 					</div>
@@ -752,7 +752,7 @@
 										alt="OFiD Crew Rex Character"></span>
 								<h3>Grampa</h3>
 								<p>
-									
+
 								</p>
 							</div>
 							<button class="scroll-arrow right" aria-label="Scroll Right"><i
@@ -768,7 +768,7 @@
 										alt="OFiD Crew Rex Character"></span>
 								<h3>Baby Tokin</h3>
 								<p>
-									
+
 								</p>
 							</div>
 							<button class="scroll-arrow right" aria-label="Scroll Right"><i
