--- a/explore.html
+++ b/explore.html
@@ -303,8 +303,8 @@
 					<!-- Apps & Learn Buttons -->
 					<div class="round-button-container">
 						<div class="button-pair">
-							<button class="round-button"><a href="#apps-list">Explore Apps</a></button>
-							<button class="round-button"><a href="/promote.html">Grow Audience</a></button>
+							<button class="round-button"><a href="#hvr-promo">Token Promo</a></button>
+							<button class="round-button"><a href="/pages/affiliate.html">Web3 Services</a></button>
 						</div>
 						<div class="button-pair">
 							<button class="round-button"><a href="#article-featured">Learn Web3</a></button>
@@ -314,44 +314,17 @@
 
 				<!-- Quick Start Section -->
 				<section class="quick-start-section">
-					<header>
-						<h2>Sign Up & Earn Tokens</h2>
-
-						<p>With our uniquie App Discovery Model, you can <b>Earn Rewards</b> by getting started with
-							featured apps!</p>
-					</header>
-
-					<!-- Quick Start: Featured -->
-					<article class="quick-start-item quick-start-featured"> <span class="image left"><img
-								src="/assets/images/hvr-logo03.png" alt="Hvr Logo"></span>
-						<div class="quick-start-content">
-							<h3 class="quick-start-title">Hvr Browser</h3>
-							<p class="align-center">Rewards Promotion LIVE</p> <button class="round-button"><a
-									href="https://www.ofidcrypt.com/explore/app-featured-hvr.html#explore-featured">Try
-									Hvr</a></button>
-						</div>
-					</article>
-
+					
 					<!-- Quick Start: Apps List -->
 					<header id="apps-list">
 						<h2>Top Players in Web3</h2>
 						<p>Check out these <b>Web3 Partner Apps</b> below.</p>
 					</header>
 
-					<!-- Quick Start - App 1 -->
+					<!-- Quick Start: Header -->
 					<div class="quick-start-items">
-						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/300x300-phantom.png" alt="Phantom Logo"></span>
-							<div class="quick-start-content">
-								<h3 class="quick-start-title">Get your Wallet</h3>
-								<p class="align-center">By Phantom Technologies Inc</p>
-								<button class="round-button"><a
-										href="https://phantom.com/download">Download</a></button>
-							</div>
-						</article>
 
-
-						<!-- Quick Start - App 2 -->
+						<!-- Quick Start - App 1 -->
 						<article class="quick-start-item"> <span class="image left"><img
 									src="/assets/images/social-logo/kinnected-03.PNG" alt="Kinnected Logo"></span>
 							<div class="quick-start-content">
@@ -359,6 +332,17 @@
 								<p class="align-center">By GFDevSoft</p> <button class="round-button"><a
 										href="/pages/kinnected.html">More
 										Details</a></button>
+							</div>
+						</article>
+
+						<!-- Quick Start - App 2 -->
+						<article class="quick-start-item"> <span class="image left"><img
+									src="/assets/images/300x300-phantom.png" alt="Phantom Logo"></span>
+							<div class="quick-start-content">
+								<h3 class="quick-start-title">Get your Wallet</h3>
+								<p class="align-center">By Phantom Technologies Inc</p>
+								<button class="round-button"><a
+										href="/explore/app-featured-phantom.html">Get Phantom</a></button>
 							</div>
 						</article>
 
@@ -372,6 +356,25 @@
 							</div>
 						</article>
 					</div>
+
+					<!-- Promo:Header -->
+					<header id="hvr-promo">
+						<h2>Sign Up & Earn Tokens</h2>
+
+						<p>With our uniquie App Discovery Model, you can <b>Earn Rewards</b> by getting started with
+							featured apps!</p>
+					</header>
+
+					<!-- Promo: Featured -->
+					<article class="quick-start-item quick-start-featured"> <span class="image left"><img
+								src="/assets/images/hvr-logo03.png" alt="Hvr Logo"></span>
+						<div class="quick-start-content">
+							<h3 class="quick-start-title">Hvr Browser</h3>
+							<p class="align-center">Rewards Promotion LIVE</p> <button class="round-button"><a
+									href="/explore/app-featured-hvr.html">Try
+									Hvr</a></button>
+						</div>
+					</article>
 				</section>
 			</article>
 
