--- a/explore/app-featured-hvr.html
+++ b/explore/app-featured-hvr.html
@@ -35,7 +35,7 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>Explore Featured Applications | OFiDCrypt Rewards</title>
+	<title>Apps & Wallets | Hvr Browser</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description"
@@ -45,7 +45,7 @@
 	<meta name="author" content="Tokin">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="Explore Featured Applications | OFiDCrypt Rewards">
+	<meta property="og:title" content="Apps & Wallets | Hvr Browser">
 	<meta property="og:description"
 		content="We collaborate with trusted developers to deliver unique Web3 experiences through innovative apps, rewarding users with tokens that hold real-world value for trying them out!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
@@ -54,7 +54,7 @@
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Explore Featured Applications | OFiDCrypt Rewards">
+	<meta name="twitter:title" content="Apps & Wallets | Hvr Browser">
 	<meta name="twitter:description"
 		content="We collaborate with trusted developers to deliver unique Web3 experiences through innovative apps, rewarding users with tokens that hold real-world value for trying them out!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
