Added CoinGecko widget to bouncyball.html anmd made nav menu items uniform copied from index.html with proper relative paths. Fixed broken video link for bouncy ball into video.

--- a/index.html
+++ b/index.html
@@ -468,10 +468,10 @@
 									<img src="/assets/images/expb-dreams.PNG" alt="e𝕏PB Dreams">
 								</span>
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">Get Tokens</h3>
-									<p class="align-center">Bouncy Ball · Save & Grow · Digital Cash</p>
+									<h3 class="quick-start-title">Bouncy Ball</h3>
+									<p class="align-center">Dynamic Token · Save · Grow · Digital Cash</p>
 									<button class="round-button">
-										<a href="/bouncyball.html#expb-intro-video">Token Page</a>
+										<a href="/bouncyball.html#guide">Token Page</a>
 									</button>
 								</div>
 							</article>
@@ -495,7 +495,7 @@
 								</span>
 								<div class="quick-start-content">
 									<h3 class="quick-start-title">Giddy Stablecoin</h3>
-									<p class="align-center">A Digital Dollar · Gift · Swap · Spend</p>
+									<p class="align-center">A Digital Dollar · Swap · Spend · Send</p>
 									<button class="round-button">
 										<a href="/onegiddy.html#giddy-guide">Explore GIDDY</a>
 									</button>
