--- a/community.html
+++ b/community.html
@@ -106,12 +106,11 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="explore.html">Services</a></li>
-				<li class="active"><a href="community.html">News</a></li>
-				<li><a href="pages/livestream.html">Events</a></li>
-				<li><a href="ofidtales.html">Giddy's</a></li>
-				<li><a href="pages/about.html">About Us</a></li>
+				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="ofidtales.html">Giddy's Shop</a></li>
+				<li><a href="explore.html">Wallets & Apps</a></li>
+				<li><a href="bouncyball.html">Tokens</a></li>
+				<li><a href="cashlinks.html">Digital Gifts</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
