--- a/ofidkid.html
+++ b/ofidkid.html
@@ -102,12 +102,11 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li ><a href="index.html">Home</a></li>
-				<li><a href="explore.html">Services</a></li>
-				<li><a href="community.html">News</a></li>
-				<li><a href="pages/livestream.html">Events</a></li>
-				<li class="active"><a href="ofidkid.html">OFiD Kid</a></li>
-				<li><a href="pages/about.html">About Us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li class="active"><a href="ofidkid.html">Baby Tokin</a></li>
+				<li><a href="explore.html">Wallets & Apps</a></li>
+				<li><a href="bouncyball.html">Tokens</a></li>
+				<li><a href="cashlinks.html">Digital Gifts</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
