Updated relative path on 2nd level pages.

--- a/pages/about.html
+++ b/pages/about.html
@@ -110,8 +110,8 @@
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../ofidtales.html">Giddy's Shop</a></li>
 				<li><a href="../explore.html">Wallets & Apps</a></li>
-				<li><a href="bouncyball.html">Tokens</a></li>
-				<li><a href="cashlinks.html">Digital Gifts</a></li>
+				<li><a href="../bouncyball.html">Tokens</a></li>
+				<li><a href="../cashlinks.html">Digital Gifts</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
