Updated footer and fixed video load on bouncyball.html. Updated logos accross pages and fixed navigation linking on featured partner pages.

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -939,7 +939,7 @@
 					<!-- Video container with poster overlay -->
 					<div id="expb-intro-video" class="video-main video-hosted-portrait">
 						<video id="myVideo" controls playsinline preload="metadata">
-							<source src="../assets/videos/bouncy-ball-intro.mp4" type="video/mp4">
+							<source src="../assets/videos/bouncy-ball-intro.MP4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
 						<!-- Poster overlay (visible before play and after video ends) -->
@@ -1137,8 +1137,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
+				<li><a href="/community.html">News & PR</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
