--- a/ofidkid.html
+++ b/ofidkid.html
@@ -103,7 +103,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
-				<li class="active"><a href="ofidkid.html">Baby Tokin</a></li>
+				<li class="active"><a href="ofidkid.html">Giddy's Universe</a></li>
 				<li><a href="explore.html">Wallets & Apps</a></li>
 				<li><a href="bouncyball.html">Tokens</a></li>
 				<li><a href="cashlinks.html">Digital Gifts</a></li>
@@ -152,7 +152,7 @@
 					<span class="date">e𝕏P Web3™ Playground</span>
 					<h1>Baby Tokin</h1>
 					<p>Also known as The OFiD Kid—he leads thrilling adventures through the magical realms of Giddy Tales, where he
-						encounters the lovable members of <a href="/ofidtales.html#meet-crew">The OFiD Crew</a>—and even crosses
+						encounters the lovable members of <a href="/ofidtales.html#meet-crew">The OFiD Crew</a> — and even crosses
 						paths with a mischievous villain or two!</p>
 				</header>
 
@@ -514,8 +514,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
+				<li><a href="/community.html">News & PR</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
