--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -95,7 +95,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="../index.html">
-				<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+				<img src="../assets/images/ofid-logo-saturn01.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
@@ -393,7 +393,7 @@
 							<div class="box-content">
 								<a href="https://hvr.world" aria-label="Visit Hvr to explore social web commenting">
 									<span class="image">
-										<img src="../assets/images/hvr-logo03.png" alt="Hvr Logo">
+										<img src="../assets/images/social-logo/hvr-logo-space-300.png" alt="Hvr Logo">
 									</span>
 								</a>
 								<h3>Hvr | Where Sites Are Social</h3>
@@ -419,10 +419,10 @@
 							<div class="box-content">
 								<a href="../kincommunity.html" aria-label="Visit ONE Kin Community page">
 									<span class="image">
-										<img src="../assets/images/ONEKin.jpg" alt="ONE Kin Logo">
+										<img src="../assets/images/one-kin-logo.JPG" alt="ONE Kin Logo">
 									</span>
 								</a>
-								<h3>ONE Kin Community</h3>
+								<h3>ONE Kin</h3>
 								<div class="button-container">
 									<a href="../kincommunity.html" class="button">Visit Page</a>
 								</div>
@@ -570,8 +570,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="../bouncyball.html">Token</a></li>
 				<li><a href="../docs/main.html">Docs</a></li>
+				<li><a href="../community.html">News & PR</a></li>
 				<li><a href="../pages/affiliate.html">Partners</a></li>
 				<li><a href="../pages/about.html">About</a></li>
 			</ul>
