--- a/explore.html
+++ b/explore.html
@@ -97,7 +97,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/logo03.PNG" alt="OFiDCrypt Logo" class="logo">
+				<img src="/assets/images/ofid-logo-saturn01.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
@@ -366,7 +366,7 @@
 
 					<!-- Promo: Featured -->
 					<article class="quick-start-item quick-start-featured"> <span class="image left"><img
-								src="/assets/images/hvr-logo03.png" alt="Hvr Logo"></span>
+								src="/assets/images/social-logo/hvr-logo-space-300.png" alt="Hvr Logo"></span>
 						<div class="quick-start-content">
 							<h3 class="quick-start-title">Hvr Browser</h3>
 							<p class="align-center">Rewards Promotion LIVE</p> <button class="round-button"><a
@@ -589,8 +589,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
+				<li><a href="/community.html">News & PR</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
