--- a/explore/app-featured-phantom.html
+++ b/explore/app-featured-phantom.html
@@ -96,7 +96,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="../index">
-				<img src="../assets/images/logo03.PNG" alt="OFiDCrypt Logo" class="logo">
+				<img src="../assets/images/ofid-logo-saturn01.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
@@ -111,8 +111,8 @@
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../ofidtales.html">Giddy's Shop</a></li>
 				<li><a href="../explore.html">Wallets & Apps</a></li>
-				<li><a href="bouncyball.html">Tokens</a></li>
-				<li><a href="cashlinks.html">Digital Gifts</a></li>
+				<li><a href="../bouncyball.html">Tokens</a></li>
+				<li><a href="../cashlinks.html">Digital Gifts</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -374,8 +374,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="../bouncyball.html">Token</a></li>
 				<li><a href="../docs/main.html">Docs</a></li>
+				<li><a href="../community.html">News & PR</a></li>
 				<li><a href="../pages/affiliate.html">Partners</a></li>
 				<li><a href="../pages/about.html">About</a></li>
 			</ul>
