--- a/kincommunity.html
+++ b/kincommunity.html
@@ -93,7 +93,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+				<img src="/assets/images/ofid-logo-saturn01.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
@@ -302,7 +302,7 @@
 							<div class="ad-content">
 								<a href="https://ofidcrypt.ca/rebuilding-together-the-rebirth-of-kin-in-one-kin-community"
 									style="border-bottom: none;">
-									<img src="/assets/images/bg-onekin-community.png" alt="Ad Banner">
+									<img src="/assets/images/one-kin-banner.PNG" alt="Ad Banner">
 								</a>
 							</div>
 						</section>
@@ -918,8 +918,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
+				<li><a href="/community.html">News & PR</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
