--- a/ofidtales.html
+++ b/ofidtales.html
@@ -994,8 +994,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
+				<li><a href="/community.html">News & PR</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
