--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -96,7 +96,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="../index.html">
-				<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+				<img src="../assets/images/ofid-logo-saturn01.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
@@ -545,8 +545,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="../bouncyball.html">Token</a></li>
 				<li><a href="../docs/main.html">Docs</a></li>
+				<li><a href="../community.html">News & PR</a></li>
 				<li><a href="../pages/affiliate.html">Partners</a></li>
 				<li><a href="../pages/about.html">About</a></li>
 			</ul>
