Updated ad banners for all level 1 and 2 pages excluding docs/main and sub levels. Minor text changes and ordering adjustments.

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -149,10 +149,23 @@
 						<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
 							style="max-width: 100%; height: auto;">
 					</a>
-					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
-						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 3"
+					<a href="https://kraken.pxf.io/xLox1A"
+						class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/kraken-banner-01.PNG" alt="Ad Banner 2"
 							style="max-width: 100%; height: auto;">
 					</a>
+					<a href="https://freeproducer.ca/" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/banner-free-producer.PNG" alt="Ad Banner 3"
+							style="max-width: 100%; height: auto;">
+					</a>
+					<a href="/bouncyball.html#buy-expb" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/expb-banner-01.png" alt="Ad Banner 4"
+							style="max-width: 100%; height: auto;">
+					</a>
+					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 5"
+							style="max-width: 100%; height: auto;">
+										</a>
 				</div>
 			</div>
 
