--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -146,15 +146,23 @@
 				<div class="ad-scroll-container">
 					<a href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=aa8d4fce2d9a&tracker=ofid_banner_index"
 						class="ad-slide" style="border-bottom: none;">
-						<img src="../assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
+						<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
 							style="max-width: 100%; height: auto;">
 					</a>
-					<a href="../bouncyball.html" class="ad-slide" style="border-bottom: none;">
-						<img src="../assets/images/expb-banner-01.png" alt="Ad Banner 2"
+					<a href="https://kraken.pxf.io/xLox1A" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/kraken-banner-01.PNG" alt="Ad Banner 2"
+							style="max-width: 100%; height: auto;">
+					</a>
+					<a href="https://freeproducer.ca/" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/banner-free-producer.PNG" alt="Ad Banner 3"
+							style="max-width: 100%; height: auto;">
+					</a>
+					<a href="../bouncyball.html#buy-expb" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/expb-banner-01.png" alt="Ad Banner 4"
 							style="max-width: 100%; height: auto;">
 					</a>
 					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
-						<img src="../assets/images/dobby-banner-01.png" alt="Ad Banner 3"
+						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 5"
 							style="max-width: 100%; height: auto;">
 					</a>
 				</div>
@@ -451,6 +459,32 @@
 									they focus on restoring real-world utility and reinforcing sustainable value for
 									holders through a
 									unified, collaborative vision.
+								</p>
+							</div>
+						</article>
+
+						<h2>Listing Sites</h2>
+						<!-- Partner 5: Blockspot.io -->
+						<article class="partner-box" id="blockspot-io">
+							<div class="box-content">
+								<a href="https://blockspot.io/coin/bouncy-ball-of-ofid-fun/"
+									aria-label="Visit ONE Kin Community page">
+									<span class="image">
+										<img src="../assets/images/social-logo/blockspot-io.png"
+											alt="Blockspot.io Logo">
+									</span>
+								</a>
+								<h3>Blockspot.io</h3>
+								<div class="button-container">
+									<a href="https://blockspot.io/coin/bouncy-ball-of-ofid-fun/" class="button">View
+										e𝕏PB</a>
+								</div>
+								<p>
+									Blockspot.io is a comprehensive cryptocurrency listing platform that provides
+									detailed token
+									information, market data, and analytics for a wide range of digital assets. It
+									serves as a valuable resource for investors, traders, and enthusiasts looking to
+									explore and stay informed about various cryptocurrencies.
 								</p>
 							</div>
 						</article>
