--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
 		gtag('config', 'G-3KX9VK5CCH');
 	</script>
 
-		<!-- JSON -->
-		<script type="application/ld+json">
+	<!-- JSON -->
+	<script type="application/ld+json">
 			{
 			  "@context": "https://schema.org",
 			  "@type": "Organization",
@@ -56,10 +56,10 @@
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-		
+
 	<!-- Specific PNG sizes for modern browsers -->
 	<link rel="icon" type="image/png" sizes="1280x1280" href="/favicon.png">
-	
+
 	<!-- Default Apple-Touch-Icon sizes -->
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
@@ -98,7 +98,7 @@
 		<a href="#darkModePanel" id="darkModeToggle" class="alt">
 			<i class="fas fa-sun"></i>
 		</a>
-		
+
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
@@ -136,6 +136,161 @@
 
 		<!-- Main -->
 		<div id="main">
+
+			<!-- Scrolling Ad Banner -->
+			<div id="expb-ball" class="ad-banner-wrapper">
+				<div class="ad-scroll-container">
+					<a href="https://shop.ledger.com/pages/ledger-nano-s-plus/?r=aa8d4fce2d9a&tracker=ofid_banner_index"
+						class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
+							style="max-width: 100%; height: auto;">
+					</a>
+					<a href="https://kraken.pxf.io/xLox1A" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/kraken-banner-01.PNG" alt="Ad Banner 2"
+							style="max-width: 100%; height: auto;">
+					</a>
+					<a href="https://freeproducer.ca/" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/banner-free-producer.PNG" alt="Ad Banner 3"
+							style="max-width: 100%; height: auto;">
+					</a>
+					<a href="/bouncyball.html#buy-expb" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/expb-banner-01.png" alt="Ad Banner 4"
+							style="max-width: 100%; height: auto;">
+					</a>
+					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
+						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 5"
+							style="max-width: 100%; height: auto;">
+					</a>
+				</div>
+			</div>
+
+			<script>
+				document.addEventListener('DOMContentLoaded', () => {
+					const container = document.querySelector('.ad-scroll-container');
+					const slides = document.querySelectorAll('.ad-slide');
+					const totalSlides = slides.length;
+					let autoScrollInterval;
+					let currentIndex = 0; // Track current index globally
+
+					// Exit if no slides
+					if (totalSlides === 0) {
+						console.warn('No slides found in .ad-scroll-container');
+						return;
+					}
+
+					// Clone first slide for continuous loop
+					const firstSlideClone = slides[0].cloneNode(true);
+					container.appendChild(firstSlideClone);
+					const allSlides = container.querySelectorAll('.ad-slide'); // Include clone
+
+					// Force start on first slide
+					function setInitialPosition() {
+						container.scrollTo({ left: 0, behavior: 'instant' });
+						currentIndex = 0; // Reset index
+					}
+
+					// Calculate slide width
+					function getBoxWidth() {
+						const slideWidth = slides[0].offsetWidth; // Actual slide width
+						const slideMargin = window.innerWidth <= 480 ? 10 : 40; // 5px L+R mobile, 20px L+R desktop
+						const totalWidth = slideWidth + slideMargin;
+						console.log('Slide width:', slideWidth, 'Total width with margins:', totalWidth);
+						return totalWidth;
+					}
+
+					// Auto-scroll function
+					function startAutoScroll() {
+						function resetAutoScroll() {
+							if (autoScrollInterval) {
+								clearInterval(autoScrollInterval);
+							}
+							autoScrollInterval = setInterval(() => {
+								currentIndex++;
+								console.log('Scrolling to index:', currentIndex);
+								if (currentIndex >= totalSlides + 1) {
+									// Reached clone, reset to first slide instantly
+									container.scrollTo({ left: 0, behavior: 'instant' });
+									currentIndex = 1; // Start from second slide
+								}
+								container.scrollTo({
+									left: currentIndex * getBoxWidth(),
+									behavior: 'smooth'
+								});
+							}, 8000); // 8 seconds
+						}
+
+						// Start auto-scrolling
+						resetAutoScroll();
+					}
+
+					// Handle touch gestures to allow taps and vertical scrolling, block horizontal swipes
+					let touchStartX = 0;
+					let touchStartY = 0;
+					let touchMoved = false;
+
+					container.addEventListener('touchstart', (e) => {
+						touchStartX = e.touches[0].clientX;
+						touchStartY = e.touches[0].clientY;
+						touchMoved = false;
+					}, { passive: true });
+
+					container.addEventListener('touchmove', (e) => {
+						const touchX = e.touches[0].clientX;
+						const touchY = e.touches[0].clientY;
+						const deltaX = Math.abs(touchX - touchStartX);
+						const deltaY = Math.abs(touchY - touchStartY);
+
+						// Block horizontal swipe (deltaX > 10, deltaY < 50)
+						if (deltaX > 10 && deltaY < 50) {
+							e.preventDefault(); // Block swipe
+							touchMoved = true;
+						}
+						// Allow vertical scrolling (deltaY > 50)
+						if (deltaY > 50) {
+							touchMoved = true; // Mark as moved, but don't prevent default
+						}
+					}, { passive: false });
+
+					container.addEventListener('touchend', (e) => {
+						if (!touchMoved) {
+							// Treat as tap, allow link click
+							const touchEndX = e.changedTouches[0].clientX;
+							const touchEndY = e.changedTouches[0].clientY;
+							const deltaX = Math.abs(touchEndX - touchStartX);
+							const deltaY = Math.abs(touchEndY - touchStartY);
+
+							if (deltaX < 10 && deltaY < 10) {
+								const target = e.target.closest('a');
+								if (target && target.href) {
+									window.location.href = target.href; // Trigger link
+								}
+							}
+						}
+					}, { passive: true });
+
+					// Prevent wheel scrolling within carousel
+					container.addEventListener('wheel', (e) => e.preventDefault(), { passive: false });
+
+					// Debounce resize handler, preserve current slide
+					let resizeTimeout;
+					window.addEventListener('resize', () => {
+						clearTimeout(resizeTimeout);
+						resizeTimeout = setTimeout(() => {
+							// Restore current slide position instead of resetting
+							container.scrollTo({
+								left: currentIndex * getBoxWidth(),
+								behavior: 'instant'
+							});
+							startAutoScroll();
+						}, 100); // 100ms debounce
+					});
+
+					// Initialize
+					setInitialPosition();
+					startAutoScroll();
+				});
+			</script>
+
 			<div class="image-custom">
 				<a href="/index.html">
 					<img src="../assets/images/404-3.jpg" alt="404: Page Not Found Art">
@@ -194,21 +349,27 @@
 					<h3>Telegram</h3>
 					<p><a href="https://t.me/OFiDBall">OFiDCrypt e𝕏P Web3™</a></p>
 				</section>
-						<!-- Hvr -->
-						<section>
-							<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
-								<img src="/assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img" class="custom-site-icon-contact">
-							</a>
-							<p><a href="https://www.ofidcrypt.ca">OFiDCrypt.ca</a></p>
-						</section>	
+				<!-- Hvr -->
+				<section>
+					<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
+						<img src="/assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img"
+							class="custom-site-icon-contact">
+					</a>
+					<p><a href="https://www.ofidcrypt.ca">OFiDCrypt.ca</a></p>
+				</section>
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
-						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-						<li><a href="https://youtube.com/@OFiDCrypt" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-						<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
-						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
+									class="label">X</span></a></li>
+						<li><a href="https://youtube.com/@OFiDCrypt" class="icon brands fa-youtube"><span
+									class="label">YouTube</span></a></li>
+						<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span
+									class="label">TikTok</span></a></li>
+						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
+									class="label">Facebook</span></a></li>
+						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
 					</ul>
 				</section>
 			</section>
@@ -232,7 +393,7 @@
 
 		<!-- Footer Extended Links Container -->
 		<div class="footer-extended-container">
-						<section class="footer-extended">
+			<section class="footer-extended">
 				<h1 class="left-aligned">
 					<span class="smaller-heading">Partner Token Projects</span><br />
 				</h1>
@@ -265,7 +426,7 @@
 				</ul>
 			</section>
 
-						<section class="footer-extended">
+			<section class="footer-extended">
 				<h1 class="left-aligned">
 					<span class="smaller-heading">Collab Communities</span><br />
 				</h1>
@@ -277,21 +438,21 @@
 			</section>
 		</div>
 
-	<!-- Page Specific Scripts -->
-	<script>
-		// Switch Visual Mode - Dark Mode Light Mode
-		document.addEventListener('DOMContentLoaded', (event) => {
+		<!-- Page Specific Scripts -->
+		<script>
+			// Switch Visual Mode - Dark Mode Light Mode
+			document.addEventListener('DOMContentLoaded', (event) => {
 				console.log('DOM fully loaded and parsed');
-				
+
 				const darkModeToggle = document.querySelector('#darkModeToggle'); // Assuming this was your original toggle
 				const newDarkModeToggle = document.querySelector('ul.icons li a img.custom-site-icon'); // New button
-			
+
 				function toggleDarkMode() {
 					document.body.classList.toggle('dark-mode');
 					darkModeToggle.classList.toggle('dark');
 					const isDarkMode = document.body.classList.contains('dark-mode');
 					localStorage.setItem('dark-mode', isDarkMode);
-			
+
 					const icon = darkModeToggle.querySelector('i');
 					if (isDarkMode) {
 						icon.classList.remove('fa-sun');
@@ -303,7 +464,7 @@
 						console.log('Switched to light mode (sun icon)');
 					}
 				}
-			
+
 				// Check local storage for dark mode on page load
 				if (localStorage.getItem('dark-mode') === 'true') {
 					document.body.classList.add('dark-mode');
@@ -313,24 +474,24 @@
 					icon.classList.remove('fa-sun');
 					console.log('Dark mode restored from local storage');
 				}
-			
+
 				// Event listener for original toggle button
 				if (darkModeToggle) {
-					darkModeToggle.addEventListener('click', function(event) {
+					darkModeToggle.addEventListener('click', function (event) {
 						event.preventDefault();
 						toggleDarkMode();
 					});
 				} else {
 					console.warn('Dark Mode Toggle button not found');
 				}
-			
+
 				// Event listener for the new button
 				if (newDarkModeToggle) {
-					newDarkModeToggle.parentElement.addEventListener('click', function(event) {
+					newDarkModeToggle.parentElement.addEventListener('click', function (event) {
 						event.preventDefault();
 						toggleDarkMode();
 					});
-					newDarkModeToggle.parentElement.addEventListener('touchstart', function(event) {
+					newDarkModeToggle.parentElement.addEventListener('touchstart', function (event) {
 						event.preventDefault();
 						toggleDarkMode();
 					});
@@ -338,14 +499,14 @@
 					console.warn('New Dark Mode Toggle button not found');
 				}
 			});
-	</script>
+		</script>
 
-	<!-- Link to non-critical JavaScript files -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
+		<!-- Link to non-critical JavaScript files -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
 </body>
 
 </html>
