Added characters and some jump-links to ofidtales.html

--- a/ofidkid.html
+++ b/ofidkid.html
@@ -103,7 +103,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
-				<li class="active"><a href="ofidkid.html">Giddy's Universe</a></li>
+				<li class="active"><a href="ofidtales.html">Giddy's Universe</a></li>
 				<li><a href="explore.html">Wallets & Apps</a></li>
 				<li><a href="bouncyball.html">Tokens</a></li>
 				<li><a href="cashlinks.html">Digital Gifts</a></li>
