--- a/ofidtales.html
+++ b/ofidtales.html
@@ -149,8 +149,7 @@
 						<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
 							style="max-width: 100%; height: auto;">
 					</a>
-					<a href="https://kraken.pxf.io/xLox1A"
-						class="ad-slide" style="border-bottom: none;">
+					<a href="https://kraken.pxf.io/xLox1A" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/kraken-banner-01.PNG" alt="Ad Banner 2"
 							style="max-width: 100%; height: auto;">
 					</a>
@@ -165,7 +164,7 @@
 					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 5"
 							style="max-width: 100%; height: auto;">
-										</a>
+					</a>
 				</div>
 			</div>
 
@@ -423,8 +422,8 @@
 								<p class="align-center">Featured Characters</p>
 							</div>
 							<button class="round-button" data-scroll="#meet-crew">
-    Profiles
-</button>
+								Profiles
+							</button>
 						</article>
 					</div>
 				</section>
@@ -757,7 +756,7 @@
 									class="fas fa-arrow-left"></i></button>
 							<div class="box-content">
 								<span class="image"><img src="assets/images/ofidtales-grampa.PNG"
-										alt="OFiD Crew Rex Character"></span>
+										alt="OFiD Crew Grampa Character"></span>
 								<h3>Grampa</h3>
 								<p>
 
@@ -772,9 +771,51 @@
 							<button class="scroll-arrow left" aria-label="Scroll Left"><i
 									class="fas fa-arrow-left"></i></button>
 							<div class="box-content">
-								<span class="image"><img src="assets/images/ofidtales-baby-tokin.PNG"
-										alt="OFiD Crew Rex Character"></span>
+								<a href="/ofidkid.html">
+									<span class="image">
+										<img src="assets/images/ofidtales-baby-tokin.PNG"
+											alt="OFiD Crew Baby Tokin Character">
+									</span>
+								</a>
 								<h3>Baby Tokin</h3>
+								<p>Baby Tokin is the adventurous, joyous heart of the OFiD Crew, spreading happiness
+									with every laugh and milestone. A lover of bananas, peaches, and blueberries, his
+									favorite treats mirror his sweet nature. Tokin’s curiosity knows no bounds—mastering
+									crawling, standing, and even his first steps, he’s always on the move. His
+									infectious giggles, spirited "Mama!" calls, and love for exploring create countless
+									cherished moments. Whether it’s delighting in Buster's hat or scaling new heights,
+									Baby Tokin’s boundless energy and charm light up every room, making him the crew’s
+									cherished little explorer and genuine leader.
+								</p>
+							</div>
+							<button class="scroll-arrow right" aria-label="Scroll Right"><i
+									class="fas fa-arrow-right"></i></button>
+						</article>
+
+						<!-- Box 6: King Laine -->
+						<article class="scroll-box">
+							<button class="scroll-arrow left" aria-label="Scroll Left"><i
+									class="fas fa-arrow-left"></i></button>
+							<div class="box-content">
+								<span class="image"><img src="assets/images/ofidtales-king-laine.PNG"
+										alt="OFiD Crew King Laine Character"></span>
+								<h3>King Laine</h3>
+								<p>
+
+								</p>
+							</div>
+							<button class="scroll-arrow right" aria-label="Scroll Right"><i
+									class="fas fa-arrow-right"></i></button>
+						</article>
+
+						<!-- Box 7: Big Bahbreh -->
+						<article class="scroll-box">
+							<button class="scroll-arrow left" aria-label="Scroll Left"><i
+									class="fas fa-arrow-left"></i></button>
+							<div class="box-content">
+								<span class="image"><img src="assets/images/ofidtales-big-bahbreh.jpg"
+										alt="OFiD Crew Bahbreh Character"></span>
+								<h3>Big Bahbreh</h3>
 								<p>
 
 								</p>
